@@ -6,7 +6,6 @@ import gettext
 import xml.dom.minidom
 from tryton.gui.window.view_form.view.form import Container
 from tryton.common import node_attributes, ICONFACTORY
-from tryton.config import CONFIG
 from .action import Action
 
 _ = gettext.gettext
@@ -83,36 +82,14 @@ class ViewBoard(object):
         attributes.setdefault('yfill', True)
         notebook = gtk.Notebook()
         notebook.set_scrollable(True)
-        positions = {
-            'top': gtk.POS_TOP,
-            'left': gtk.POS_LEFT,
-            'right': gtk.POS_RIGHT,
-            'bottom': gtk.POS_BOTTOM,
-            }
-        notebook.set_tab_pos(positions[CONFIG['client.form_tab']])
         container.add(notebook, attributes)
         self.parse(node, notebook)
 
     def _parse_page(self, node, notebook, attributes):
-        if CONFIG['client.form_tab'] == 'left':
-            angle = 90
-            tab_box = gtk.VBox(spacing=3)
-            image_pos, image_rotate = ('end',
-                gtk.gdk.PIXBUF_ROTATE_COUNTERCLOCKWISE)
-        elif CONFIG['client.form_tab'] == 'right':
-            angle = -90
-            tab_box = gtk.VBox(spacing=3)
-            image_pos, image_rotate = ('start',
-                gtk.gdk.PIXBUF_ROTATE_CLOCKWISE)
-        else:
-            angle = 0
-            tab_box = gtk.HBox(spacing=3)
-            image_pos, image_rotate = ('start',
-                gtk.gdk.PIXBUF_ROTATE_NONE)
+        tab_box = gtk.HBox(spacing=3)
         if '_' not in attributes['string']:
             attributes['string'] = '_' + attributes['string']
         label = gtk.Label(attributes['string'])
-        label.set_angle(angle)
         label.set_use_underline(True)
         tab_box.pack_start(label)
 
@@ -120,13 +97,9 @@ class ViewBoard(object):
             ICONFACTORY.register_icon(attributes['icon'])
             pixbuf = tab_box.render_icon(attributes['icon'],
                 gtk.ICON_SIZE_SMALL_TOOLBAR)
-            pixbuf = pixbuf.rotate_simple(image_rotate)
             icon = gtk.Image()
             icon.set_from_pixbuf(pixbuf)
-            if image_pos == 'end':
-                tab_box.pack_end(icon)
-            else:
-                tab_box.pack_start(icon)
+            tab_box.pack_start(icon)
         tab_box.show_all()
 
         viewport = gtk.Viewport()
